--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 
     <body>
         yeet
+
+        <button href="/wordle_helper/index.html">
+            Wordle Helper
+        </button>
     </body>
 </html>
