trying to fix links, stylesheet, script

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         yeet
 
-        <button href="/wordle_helper/index.html">
+        <button href="/projects/wordle_helper/index.html">
             Wordle Helper
         </button>
     </body>
