--- a/wordle_helper/index.html
+++ b/wordle_helper/index.html
@@ -13,8 +13,8 @@
     <link rel="canonical" href="https://glitch-hello-website.glitch.me/" />
     <meta name="description" content="Wordle Helper / Guesser"/>
 
-    <link rel="stylesheet" href="/style.css" />
-    <script src="/script.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   
   <body onload="readWords()">
