added page icon image

--- a/wordle_helper/index.html
+++ b/wordle_helper/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="icon" href="https://cdn.glitch.global/e02e4e83-fec1-4a4b-9c3e-52ce40625bb1/logo2.png?v=1727992729225"/>
-    <link rel="apple-touch-icon" href="https://cdn.glitch.global/e02e4e83-fec1-4a4b-9c3e-52ce40625bb1/logo2.png?v=1727992729225">
+    <link rel="icon" href="/projects/wordle_helper/logo2.png"/>
+    <link rel="apple-touch-icon" href="/projects/wordle_helper/logo2.png">
     
     <title>Wordle Helper</title>
 
