link from primary incex still broken

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         yeet
 
-        <button href="/projects/wordle_helper/index.html">
+        <a href="projects/wordle_helper/index.html">
             Wordle Helper
-        </button>
+        </a>
     </body>
 </html>
