should be fixed now

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         yeet
 
-        <a href="projects/wordle_helper/index.html">
+        <a href="wordle_helper/index.html">
             Wordle Helper
         </a>
     </body>
