added warmup1, warmup2, and quantum photo reel

--- a/wordle_helper/index.html
+++ b/wordle_helper/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <link rel="icon" href="/projects/wordle_helper/logo2.png"/>
-    <link rel="apple-touch-icon" href="/projects/wordle_helper/logo2.png">
+    <!-- <link rel="icon" href="/projects/wordle_helper/logo2.png"/>
+    <link rel="apple-touch-icon" href="/projects/wordle_helper/logo2.png"> -->
+    <link rel="icon" href="logo2.png"/>
+    <link rel="apple-touch-icon" href="logo2.png">
     
     <title>Wordle Helper</title>
-
-    <link rel="canonical" href="https://glitch-hello-website.glitch.me/" />
-    <meta name="description" content="Wordle Helper / Guesser"/>
 
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
