--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     </head>
 
     <body>
-        yeet
-
-        <a href="wordle_helper/index.html">
-            Wordle Helper
-        </a>
+        
+        <a href="wordle_helper/index.html">Wordle Helper</a>
+        <br>
+        <a href="tcs/warm_up1/">TCS Warm Up 1</a>
+        <br>
+        <a href="tcs/warm_up2/">TCS Warm Up 2</a>
     </body>
 </html>
