added quantum photo reel link to home page

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         <a href="tcs/warm_up1/">TCS Warm Up 1</a>
         <br>
         <a href="tcs/warm_up2/">TCS Warm Up 2</a>
+        <br>
+        <a href="tcs/warm_up2/">TCS Quantum Photo Reel</a>
     </body>
 </html>
