--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <br>
         <a href="tcs/warm_up2/">TCS Warm Up 2</a>
         <br>
-        <a href="tcs/warm_up2/">TCS Quantum Photo Reel</a>
+        <a href="tcs/quantum_photo_reel/">TCS Quantum Photo Reel</a>
     </body>
 </html>
