making changes to warm ups for portfolio

--- a/tcs/warm_up1/index.html
+++ b/tcs/warm_up1/index.html
@@ -19,7 +19,7 @@
         <img style="height: 30px; float: left;" src="../img/TRAIN logo w transparent background.png">
       </div>
       <div id="header-center" style="width: 60%; display: inline">
-        <a href="." id="header">Week 6 Lab Warm-Up</a>
+        <a href="." id="header">Color Classification Warm-Up</a>
       </div>
       <div id="header-left" style="width: 30%; display: inline-block"></div>
       
