--- a/tcs/warm_up2/index.html
+++ b/tcs/warm_up2/index.html
@@ -22,7 +22,7 @@
         <img style="height: 30px; float: left;" src="../img/TRAIN logo w transparent background.png">
       </div>
       <div id="header-center" style="width: 60%; display: inline">
-        <a href="." id="header">Week 9 Warm-Up</a>
+        <a href="." id="header">Feature Selection Warm-Up</a>
       </div>
       <div id="header-left" style="width: 30%; display: inline-block"></div>
       
@@ -32,6 +32,8 @@
     <div id="main">
       <span>You are training a Machine Learning model to predict life expectancy based on a number of factors.</span>
       <span>Perform <b>feature selection</b> by toggling on/off different features until you've produced a model that can make the most accurate predicitons.</span>
+      <span>As a challenge, identify which <b>5</b> features are the <i>most</i> relevant for the model to determine life expectancy. <div class="tooltip2"><span style="display: inline; border-bottom: 1px dotted #6d6d6d; color:#6d6d6d">Hint</span><div id="hinttooltip">RMSE = 1.9288</div></div></span>
+      <!-- Ans: Child Mortality, Adult Mortality, Alcohol Consumption, BMI, GDP Per Capita -->
 
       <div class="center" id="loading-container">
         <div class="loader"></div>
